--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snake Game</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <h1>Hello World</h1>
-    <p>look what i did</p>
+    <div class="game-container">
+        <div class="snake" id="snake"></div>
+        <div class="food" id="food"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
