--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background: url('space.jpg') no-repeat center center fixed;
+            /* You can use 'cover' to make sure the background covers the entire viewport */
+            background-size: cover;
+        }
+    </style>
+    <title>Your Webpage Title</title>
 </head>
 <body>
-    <div class="game-container">
-        <div class="snake" id="snake"></div>
-        <div class="food" id="food"></div>
-    </div>
-    <script src="script.js"></script>
+    <!-- Your HTML content goes here -->
+    <h1>Welcome to My Website!</h1>
+    <p>This is a simple webpage with a background.</p>
 </body>
 </html>
