--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <!-- Your HTML content goes here -->
-    <h1>dont send to anyone else</h1>
-    <p>
+    <h1>dont send to anyone else, go to game.github.io for the games</h1>
+    <p> 
         https://www.quizlet.gq/
         https://omar.linxy.eu/
         https://mrbmp.tlochsta.net/
