code and other stuff

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <style>
         body {
             background: url('space.jpg') no-repeat center center fixed;
-            /* You can use 'cover' to make sure the background covers the entire viewport */
             background-size: cover;
+            color: white; /* Set the text color to white */
         }
     </style>
     <title>PROXIES</title>
@@ -15,7 +15,7 @@
 <body>
     <!-- Your HTML content goes here -->
     <h1>dont send to anyone else, go to game.github.io for the games</h1>
-    <p> 
+    <p>
         https://www.quizlet.gq/
         https://omar.linxy.eu/
         https://mrbmp.tlochsta.net/
