--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background: url('space.jpg') no-repeat center center fixed;
+            background: url('space1.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white; /* Set the text color to white */
         }
