--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         body {
             background: url('space1.jpg') no-repeat center center fixed;
             background-size: cover;
-            color: white; /* Set the text color to white */
+            color: black; /* Set the text color to white */
         }
     </style>
     <title>PROXIES</title>
